--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="TurquesaBay - Your paradise in Samaná, Dominican Republic"
     />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+   <link rel="icon" href="/favicon.ico?v=2">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
