--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
+    <meta name="google-site-verification" content="nA66ich7y_GB4_bjZm62vJ5yBtnxpPafCL3CM2lzBX0" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#14b8a6" />
     
